--- a/Public/assets/css/forms.css
+++ b/Public/assets/css/forms.css
@@ -62,7 +62,7 @@ header .login-container .actions button {
     font-weight: 600;
 }
 
-.register-box p.text-muted { font-size: 12px; margin-top: 5px; }
+.register-box p.text-muted { font-size: 12px; margin-top: 5px; margin-left: 30px; }
 .register-box .form-group { position: relative; }
 .register-box .form-group button.question {
     width: 30px;
