--- a/Public/assets/css/default.css
+++ b/Public/assets/css/default.css
@@ -202,6 +202,7 @@ header .logged-box .box-me a.menuLogged {
 
 header .logged-box .box-me a.menuLogged span {
     font-size: 10px;
+    animation: heartBeat 2s linear infinite;
 }
 
 header .logged-box .box-me a.menuLogged:hover,
@@ -405,6 +406,8 @@ header .logged-box .notifications .box-notifications ul a span {
 header .logged-box .notifications .box-notifications ul a:hover {
     background-color: #f0f0f0;
 }
+
+header .logged-box .notifications .box-notifications.message { display: none; }
 
 header .logo,
 footer .logo {
@@ -949,7 +952,8 @@ footer .logo {
     margin-top: 0;
 }
 
-.register-box {
+.register-box,
+.profile-box {
     padding: 10px 20px;
     height: 550px;
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, .100);
@@ -983,4 +987,145 @@ footer .logo {
     overflow-y: auto;
     max-height: 360px;
     min-height: 360px;
+}
+
+.general-box.profile-box { height: 800px; }
+
+.general-box.profile-box .wallpaper {
+    width: 100%;
+    height: 250px;
+    background-color: var(--second-medium-color);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, .1);
+    background-size: cover;
+    background-position: center;
+    image-rendering: optimizeQuality;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.general-box.profile-box .wallpaper .avatar {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    bottom: -75px;
+    left: 75px;
+    background-color: var(--second-strong-color);
+    border-radius: 50%;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, .2);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.general-box.profile-box .menuProfile {
+    width: 100%;
+    float: left;
+    padding-left: 250px;
+    height: 60px;
+    background-color: #f6f6f6;
+    border-bottom: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    border-right: 1px solid #ccc;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, .100);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.general-box.profile-box .menuProfile .name {
+    font-size: 24px;
+    font-weight: 600;
+    width: 180px;
+    height: 60px;
+    padding-top: 10px;
+    color: var(--default-text);
+    float: left;
+}
+
+.general-box.profile-box .menuProfile ul {
+    width: calc(100% - 180px);
+    height: 60px;
+    float: right;
+    display: flex;
+    padding-top: 15px;
+    justify-content: flex-end;
+}
+
+.general-box.profile-box .menuProfile ul li {
+    padding: 5px 20px;
+    height: 45px;
+    margin-right: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    font-weight: 600;
+    transition: border .1s;
+    color: #555;
+}
+
+.general-box.profile-box .menuProfile ul li:hover,
+.general-box.profile-box .menuProfile ul li.active { border-bottom: 4px solid var(--strong-color) }
+
+.general-box.profile-box .wallpaper button.edit {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: none;
+    border-radius: 50%;
+    color: #fafafa;
+    width: 35px;
+    height: 35px;
+    background-color: rgba(255, 255, 255, .3);
+}
+
+.general-box.profile-box .box-page {
+    width: 100%;
+    height: 440px;
+    margin: 30px 0 0 0;
+    float: left;
+}
+
+.general-box.profile-box .box-page .last-ativies {
+    width: 100%;
+    height: 440px;
+    float: left;
+    position: relative;
+}
+
+.general-box.profile-box .box-page .last-ativies .title {
+    width: 100%;
+    height: 40px;
+    background-color: #fafafa;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+    color: #bbb;
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.general-box.profile-box .box-page .last-ativies ul {
+    width: 100%;
+    height: 400px;
+    max-height: 400px;
+    overflow-y: auto;
+}
+
+.general-box.profile-box .box-page .last-ativies ul li {
+    width: 100%;
+    height: 60px;
+    background-color: white;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 12px;
+    color: var(--default-text);
+    font-weight: 300;
+}
+
+.general-box.profile-box .box-page .last-ativies ul li:nth-child(even) { background-color: #fafafa; }
+
+.general-box.profile-box .box-page .last-ativies:first-of-type ul li {
+    height: 40px;
+    font-size: 13px;
 }
