--- a/Public/assets/css/default.css
+++ b/Public/assets/css/default.css
@@ -989,7 +989,7 @@ footer .logo {
     min-height: 360px;
 }
 
-.general-box.profile-box { height: 800px; }
+.general-box.profile-box { min-height: 800px; float: left; height: auto; overflow: hidden; }
 
 .general-box.profile-box .wallpaper {
     width: 100%;
@@ -1016,6 +1016,7 @@ footer .logo {
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, .2);
     background-size: cover;
     background-repeat: no-repeat;
+    border: 5px solid white;
     background-position: center;
 }
 
@@ -1070,21 +1071,23 @@ footer .logo {
 
 .general-box.profile-box .wallpaper button.edit {
     position: absolute;
-    top: 10px;
+    bottom: 10px;
     right: 10px;
     border: none;
     border-radius: 50%;
     color: #fafafa;
     width: 35px;
     height: 35px;
-    background-color: rgba(255, 255, 255, .3);
+    background-color: rgba(0, 0, 0, .3);
 }
 
 .general-box.profile-box .box-page {
     width: 100%;
-    height: 440px;
-    margin: 30px 0 0 0;
+    height: 0;
+    margin: 0;
     float: left;
+    position: relative;
+    visibility: hidden;
 }
 
 .general-box.profile-box .box-page .last-ativies {
@@ -1117,7 +1120,7 @@ footer .logo {
     height: 60px;
     background-color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 10px;
     font-size: 12px;
     color: var(--default-text);
     font-weight: 300;
@@ -1125,7 +1128,99 @@ footer .logo {
 
 .general-box.profile-box .box-page .last-ativies ul li:nth-child(even) { background-color: #fafafa; }
 
-.general-box.profile-box .box-page .last-ativies:first-of-type ul li {
-    height: 40px;
-    font-size: 13px;
+.general-box.profile-box .box-page .last-ativies:first-of-type ul li { height: 40px; font-size: 13px; }
+
+.general-box.profile-box .box-page.active { height: 440px; visibility: visible; margin: 30px 0 0 0; }
+
+.general-box.profile-box .box-page.friends.active {
+    height: 1200px;
+    max-height: 1200px !important;
+    overflow-y: auto;
+}
+
+.general-box.profile-box .box-page.friends .friend {
+    width: 310px;
+    height: 100px;
+    background-color: #f8f8f8;
+    border: 1px solid #eee;
+    border-radius: 5px;
+    float: left;
+    margin: 10px 12px;
+    padding: 5px;
+}
+
+.general-box.profile-box .box-page.friends .friend .avatar-friend {
+    width: 70px;
+    border-radius: 50%;
+    float: left;
+    height: 70px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 10px 0 0 10px;
+}
+
+.general-box.profile-box .box-page.friends .friend .info {
+    float: right;
+    width: calc(100% - 90px);
+    height: 90px;
+}
+
+.general-box.profile-box .box-page.friends .friend .info span:first-of-type {
+    width: 100%;
+    float: left;
+    margin-top: 10px;
+}
+
+.general-box.profile-box .box-page.friends .friend .info span:first-of-type a {
+    font-weight: 600;
+    font-size: 14px;
+    color: var(--default-text);
+}
+
+.general-box.profile-box .box-page.friends .friend .info span:nth-child(2) {
+    font-size: 11px;
+    color: #aaa;
+    width: 100%;
+    float: left;
+}
+
+.general-box.profile-box .box-page.friends .friend .info button {
+    font-size: 12px;
+    float: left;
+    margin-top: 5px;
+}
+
+.general-box.profile-box .box-page.friends .menuHandle,
+.general-box.profile-box .box-page.topics .menuHandle {
+    width: 100%;
+    float: left;
+    height: 50px;
+    position: sticky;
+    padding: 7.5px 12px;
+    top: 0;
+    left: 0;
+    background-color: #fafafa;
+    border: 1px solid #ddd;
+}
+
+.general-box.profile-box .box-page.friends .menuHandle .btn,
+.general-box.profile-box .box-page.topics .menuHandle .btn {
+    font-size: 14px;
+    cursor: default;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.general-box.profile-box .box-page.friends .menuHandle .btn:last-of-type,
+.general-box.profile-box .box-page.topics .menuHandle .btn:last-of-type { margin-right: 0; }
+
+.general-box.profile-box .box-page.friends .menuHandle .btn span,
+.general-box.profile-box .box-page.topics .menuHandle .btn span { font-size: 14px; }
+
+.general-box.profile-box .box-page.topics table { font-size: 14px; }
+
+.general-box.profile-box .box-page.topics {
+    max-height: 900px !important;
+    overflow-y: auto;
 }
