--- a/Public/assets/css/forms.css
+++ b/Public/assets/css/forms.css
@@ -8,6 +8,14 @@ button.btn { box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.07) }
 *[class*="btn"].btn-danger { background: var(--default-wallpaper), var(--danger); }
 *[class*="btn"].btn-warning { background: var(--default-wallpaper), var(--warning); }
 
+.alert {font-size: 14px; position: relative; overflow: hidden; padding-right: 30px; }
+
+.alert.alert-danger { border-color: #c0392b; background-color: #e74c3c; color: var(--light); font-weight: 500; }
+.alert.alert-success { border-color: #27ae60; background-color: #2ecc71; color: var(--light); font-weight: 500; }
+
+.alert b,
+.alert strong { font-weight: 700; color: white; }
+
 header input.input-search {
     background-color: rgba(0, 0, 0, .1);
     border: none;
