--- a/Public/assets/css/default.css
+++ b/Public/assets/css/default.css
@@ -1271,7 +1271,38 @@ footer .logo {
     margin-bottom: 5px;
 }
 
-.general-box .general-categorie-info button {
+.general-box .general-categorie-info button,
+.general-box .general-categorie-info a {
     padding: 5px 15px;
     font-size: 13px;
+}
+
+nav ul.pagination { margin: 10px 0; }
+
+nav ul li a {
+    background: none !important;
+    border-color: transparent !important;
+    font-size: 14px;
+    color: #212121 !important;
+    margin-right: 5px;
+}
+
+nav ul li a i { font-size: 12px; }
+
+nav ul li.active a,
+nav ul li:not(.disabled):hover a {
+    font-weight: 700 !important;
+    border-radius: 50%;
+    background: var(--strong-color) !important;
+    color: white !important;
+}
+
+.general-box div.form {
+    width: 100%;
+    min-height: 500px;
+    background-color: white;
+    float: left;
+    border-radius: 5px;
+    box-shadow: 0 0 3px 2px rgba(0, 0, 0, .100);
+    padding: 20px;
 }
